cleaning up a few things

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,7 @@
 			},
 			"externalConsole": false,
 			"sourceMaps": true,
-			"outDir": "./build"
+			"outDir": "./dist/node/"
 		},
 		{
 			"name": "Attach",
