--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "noImplicitAny": true,
         "preserveConstEnums": true,
         "sourceMap": true,
-        "outDir": "./build",
+        "outDir": "./dist",
         "watch": false
     },
     "files": [
