--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
 	"version": "0.1.0",
 
 	// The command is tsc. Assumes that tsc has been installed using npm install -g typescript
-	"command": "./node_modules/typescript/bin/tsc",
+	"command": "node",
 
 	// The command is a shell script
 	"isShellCommand": true,
@@ -14,7 +14,7 @@
 	"showOutput": "silent",
 
 	// Tell the tsc compiler to use the tsconfig.json from the open folder.
-	"args": ["-p", "."],
+	"args": ["${workspaceRoot}/node_modules/typescript/lib/tsc.js", "-p", "${workspaceRoot}"],
 
 	// use the standard tsc problem matcher to find compile problems
 	// in the output.
