--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.1.5",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.2.0",
+    "mocha": "^2.4.5",
     "typescript": "^1.7.5"
   }
 }
